[package]
name = "srt400-pico"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp-pico = "0.5.0"
embedded-hal ="0.2.7"
usb-device = "0.2.8"
usbd-serial = "0.1.1"
pio-proc = "0.2.1"
pio = "0.2.0"
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.1.2"
usbd-hid = "0.6.1"
byteorder = { version = "1.4.3", default-features = false }
panic-halt = "0.2.0"
